--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h1 class="overHeaderH">LARS ASPLUND</h1>
           <h2 class="h2Ov">WEBBYRÅN FRÅN <br />GÄVLE</h2>
         </div>
-        <h3 class="h3Res">EN FANTASTISK DESIGN FRÅN EN LOKAL PRODUCENT</h3>
+        <h3 class="h3Res">EN FANTASTISK DESIGN FRÅN DIN LOKALA PRODUCENT</h3>
         <h4 class="bigH4">
           Jag skapar möjligheter just
           <i>för dig och dina drömmar.</i>
